Fix IntelliJ IDEA 'platform encoding not initialized' error
Problem:
When running tests via IntelliJ IDEA's test runner (not Gradle), users
encountered "platform encoding not initialized" errors. IntelliJ loads
classes earlier than Gradle's CLI runner, triggering NewStringUTF()
calls before the JVM's platform encoding system was fully initialized.

Root Cause:
The JVMTI agent called env->NewStringUTF() during native method binding
callbacks, which can fire during the JVM's PRIMORDIAL/ONLOAD phase before
platform encoding is available. IntelliJ's eager class loading exposed
this timing issue.

Solution:
1. Register for VM_INIT event (fires after JVM is fully initialized)
2. Cache string constants ("JVMTI-Agent", "JVMTI-DNS") as global
   references during VM_INIT callback
3. Replace NewStringUTF() calls in socket/DNS interceptors with
   cached string accessors
4. All JNI string operations now occur after encoding is initialized

Changes:
- native/include/agent.h: Add cached string globals and accessors
- native/src/agent.cpp: Implement VM_INIT callback and string caching
- native/src/socket_interceptor.cpp: Use GetCallerAgentString()
- native/src/dns_interceptor.cpp: Use GetCallerDnsString()
- README.md: Add IntelliJ compatibility troubleshooting section
- docs/compatibility-matrix.md: Update IDE compatibility notes

Testing:
- All existing tests pass (regression verified)
- Fix eliminates timing dependency on class loading order
- Works with both IntelliJ IDE runner and Gradle CLI

Fixes: IntelliJ IDEA "platform encoding not initialized" error
Compatibility: Works on all Java versions (JVMTI is version-independent)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>